第三次提交，基本前端功能实现

--- a/frontend/src/layouts/BasicLayout/index.css
+++ b/frontend/src/layouts/BasicLayout/index.css
@@ -1,3 +1,11 @@
-.basic-layout {
+/*.basic-layout {*/
+/*    */
+/*}*/
+
+.ant-layout-content {
     padding-bottom: 96px !important;
+}
+
+.ant-design-pro {
+    height: 100%;
 }
