--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -1,6 +1,17 @@
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
 html,
 body {
-  max-width: 100vw;
-  max-height: 100vh;
-  overflow-x: hidden;
+    max-width: 100vw;
+    max-height: 100vh;
+    overflow-x: hidden;
+}
+
+.max-width-content{
+    max-width: 1200px;
+    margin: 0 auto;
 }
